
                                    Hatari
                                   --------
                                Release Notes



 Version 1.2.0 (2009-01-24):
 ---------------------------

- The Hatari project has been moved from hatari.sourceforge.net to
  http://hatari.berlios.de. Please update all bookmarks!
- New zip2st.sh shell script for converting .ZIP files into .ST disk images
- Fixed a bug that could write data to the wrong disk image (resulting
  in data loss)

Emulation:
- MIDI input supported in addition to output; --midi option is now
  replaced with separate --midi-in and --midi-out options
- Support for STE hardware horizontal scrolling in medium res
- Make the FDC Read Address command always return success, even if
  we don't really return the correct bytes for now (fixes a few game loaders)
- Improved shadow register when writing to the YM2149 (fixes X-Out music)
- Cleaner blitter code with improved timings
- Emulation of interrupts jitter for HBL and VBL + improved timing accuracy
- Improve color alignment with the shifter (for spectrum512 like images)
- Fix to the fire button detection reported in some games
- Added IDE hard disk emulation


 Version 1.1.0 (2008-11-29):
 ---------------------------

Emulation:
- Falcon DSP emulation good enough to improve some few games/demos, e.g.
  Virtual City. (most still work better with emulation disabled, though)
- New sound engine that fixes all problems with the old one
- 16-bit stereo sound (instead of 8-bit mono)
- Improved blitter emulation (blitter cycles emulation, blitter interrupt)
- Improved STE support for some video registers (hscroll, linewidth, ...)
- Improved printer emulation
- Improved STE microwire emulation
- Improved support for games & demos which are accessing IKBD directly
  (including a fake 6301 emulation for the known IKBD programs)
- ACSI emulation fix to get HDDriver working
- Some other minor bugfixes to ST/STe emulation (FDC, MFP, PSG, RS-232)
- Improved MFP emulation